feat: udistrital/sga_documentacion#575
se agrega metodo patch en semaforo
